# logics

./: .gitignore  Cargo.toml  save.ron
docs/: BoardBinaryInput.drawio  BoardBinaryOutput.drawio  Chip.drawio  Clock.drawio
saves/: 4-bit-adder.ron  4bit-counter.ron  flip-flop.ron  many.ron  rot-test.ron  save.ron  save2.ron  test.ron
src/: camera.rs  main.rs
src/assets/: common_assets.rs  designer_assets.rs  mod.rs
src/debug/: bounding_box_gizmos.rs  debug_mode_settings.rs  debug_mode_state.rs  entity_ids.rs  mod.rs  window_fps_display.rs
src/designer/: assets.rs  board_binary_io.rs  board_binary_io_pins.rs  board_entity.rs  bounding_box.rs  chip.rs  clock.rs  copy_paste.rs  cursor.rs  designer_state.rs  file_dialog.rs  io_pin.rs  macros.rs  mod.rs  model.rs  pin.rs  position.rs  render_settings.rs  rotation.rs  save_load.rs  selection.rs  signal.rs  signal_state.rs  wire.rs
src/designer/copy_paste/: mod.rs
src/designer/cursor/: mod.rs
src/designer/devices/: and_2.rs  binary_io.rs  clock.rs  d_flipflop.rs  device.rs  generic_chip.rs  jk_flipflop.rs  mod.rs  nand_2.rs  not.rs  or_2.rs  (+2 more)
src/events/: events.rs  mod.rs
src/input/: keybindings.rs  mod.rs
src/simulation/: board_entity.rs  bounding_box.rs  builtin_chip.rs  chip.rs  cursor.rs  debug.rs  events.rs  expressions.rs  input.rs  io_pin.rs  mod.rs  pin.rs  pin_state.rs  render_settings.rs  signal_state.rs  simulation.rs  utils.rs  wire.rs
src/test/: expressions.rs
src/ui/: chip_selector.rs  circuit_board.rs  cursor.rs  cursor_captured.rs  draw_layer.rs  mod.rs  styles.rs  ui.rs  utils.rs
(+8 files in other folders)
