[package]
name = "logics"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.1"
bevy_prototype_lyon = "0.12.0"
bevy-inspector-egui = "0.25.2"
bevy_pancam = "0.13.0"
moonshine-save = "0.3.9"
moonshine-view = "0.1.5"
moonshine-core = "0.2.0"
uuid = "1.10.0"
bevy_framepace = "0.17.1"
rfd = "0.15.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3