[package]
name = "logics"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
bevy_prototype_lyon = "0.13.0"
bevy-inspector-egui = "0.28.0"
bevy_pancam = "0.16.0"
bevy_framepace = "0.17.1"
moonshine-save = "0.3.10"
moonshine-view = "0.1.6"
moonshine-core = "0.2.1"
uuid = "1.11.0"
rfd = "0.15.1"
crossbeam-channel = "0.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3